# liquid_client

./: .gitignore  README.md  api.md  openai-api.md  pyproject.toml
examples/: code_clone_detection.py  code_defect_detection.py  hello_world.py  labs_with_api_version.py  liquid_api.ipynb  long_prompts.txt  run_ai2rc.py  short_prompts.txt  test_labs_api.py  test_labs_api_parallel.py  test_openai.ipynb  upload_folder.py
examples/evals/: code_clone_detection.py
examples/langchain/: chat_openai.ipynb
examples/openai/: chat_completion.ipynb  function_calling.ipynb
liquidai/: __init__.py  client.py
